--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -7,7 +7,18 @@
     android:orientation="vertical"
     android:padding="15dp"
     tools:context=".ResultActivity">
-
+    <TextView
+        android:id="@+id/text_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="최다투표 이미지"/>
+    <ImageView
+        android:id="@+id/imgv"
+        android:layout_width="150dp"
+        android:layout_height="200dp"
+        android:src="@drawable/movie1"
+        android:layout_gravity="center_horizontal"/>
     <TableLayout
         android:stretchColumns="0"
         android:layout_width="match_parent"
